@@ -1,3 +1,4 @@
+* Set correctly the focus on tab switching
 * Add shortcut to focus search entry
 * Add binary field to tree views
 * Improve board view:
